--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@
     outline: none;
     margin-right: 40px;
 }
+.fixed-top {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+}
 .home{
     width: 100%;
     height: 100%;
