--- a/style.css
+++ b/style.css
@@ -18,27 +18,27 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    background-color: gray;
+    background-color: darkblue;
     top: 13%;
 }
 .customer{
     width: 100%;
     height: 100%;
     position: absolute;
-    background-color: gold;
+    background-color: deepskyblue;
     top: 113%;
 }
 .item{
     width: 100%;
     height: 100%;
     position: absolute;
-    background-color: orange;
+    background-color: cornflowerblue;
     top: 213%;
 }
 .placeOrder{
     width: 100%;
     height: 100%;
     position: absolute;
-    background-color: black;
+    background-color: blue;
     top: 313%;
 }
