--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    background-color: deepskyblue;
+    background-color: white;
     top: 113%;
 }
 .item{
