--- a/style.css
+++ b/style.css
@@ -39,6 +39,6 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    background-color: blue;
+    background-color: grey;
     top: 313%;
 }
