--- a/style.css
+++ b/style.css
@@ -32,13 +32,13 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    background-color: cornflowerblue;
+    background-color: grey;
     top: 213%;
 }
 .placeOrder{
     width: 100%;
     height: 100%;
     position: absolute;
-    background-color: grey;
+    background-color: white;
     top: 313%;
 }
